--- a/templates/authentication/dashboard.html
+++ b/templates/authentication/dashboard.html
@@ -14,7 +14,11 @@
         <div class="col-12 col-md-8">
             <div class="card">
                 <div class="card-body">
-                    
+                    {% for task_category in task_categories_file %}
+                        <a href="{% url 'category_detail' task_category.pk %}">
+                            {{ task_category.name }}
+                        </a>
+                    {% endfor %}
                 </div>
             </div>
         </div>
