--- a/templates/base.html
+++ b/templates/base.html
@@ -140,7 +140,7 @@
             <!-- <a href="#" id="load-chat-btn">Load Chat Content</a> -->
 
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'all_tasks' %}">  <!-- id="load-tasks-btn" -->
+                <a class="nav-link" href="">  <!-- id="load-tasks-btn" -->
                     <i class="fas fa-fw fa-table"></i>
                     <span>Tasks</span></a>
             </li>
@@ -300,7 +300,7 @@
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                 aria-labelledby="userDropdown">
-                                <a class="dropdown-item" href="{% url 'dashboard' %}">
+                                <a class="dropdown-item" href="{% url 'profile' %}">
                                     <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Profile
                                 </a>
