--- a/templates/task_checklist/_tasks_list.html
+++ b/templates/task_checklist/_tasks_list.html
@@ -1,7 +1,7 @@
 <!-- _tasks_list.html -->
 {% load static %}
 
-{% for task in all_tasks %}
+{% for task in tasks %}
 <tr id="task-row-{{ task.id }}">
     <!-- display when on laptop -->
     <td style="width: 25px; height: auto;" id="td-one">
