--- a/templates/task/items_detail.html
+++ b/templates/task/items_detail.html
@@ -76,9 +76,9 @@
     </div>
 </div>
 <div style="padding-bottom: 4px;">
-    <a href="{% url 'create_subtask_for_task' task.pk %}" class='btn btn-primary btn-sm'>
+    <button type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#modelsubtaskcreate" data-task-id="{{ task.id }}">
         Add SubTask
-    </a>
+    </button>
 </div>
 {% for subtask in sub_tasks %}
     {% if subtask.is_complete %}
