--- a/templates/task_checklist/update_task_category.html
+++ b/templates/task_checklist/update_task_category.html
@@ -2,20 +2,13 @@
 {% load static %}
 
 {% block content %}
-<style>
-    .btn {
-        padding:5px;
-    }
-</style>
 <div class="container">
     <div class="card">
         <div class="card-body">
-            <form id="editCategoryForm" method="POST">
+            <form action="" method="POST">
                 {% csrf_token %}
                 {{ form.name }}
-                <div class="btn">
-                    <input class="btn btn-primary" type="submit" value="Submit">
-                </div>
+                <input type="submit" value="change" class="form-control btn btn-primary">
             </form>
         </div>
     </div>
